# scipion-em-chai1

./: pyproject.toml
chai1/: __init__.py  constants.py  protocols.conf
chai1/protocols/: __init__.py  protocol_chai1.py
chai1/viewers/: __init__.py  viewers
chai1/wizards/: __init__.py  wizard_chai1.py
scipion_em_chai1.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scipion_em_chai_1.egg-info/: PKG-INFO  SOURCES.txt
